# iguanatrader

./: .coderabbit.yaml  .dockerignore  .editorconfig  .eslintrc.cjs  .gitattributes  .gitignore  .gitleaksignore  .gitmodules  .mcp.json  .pre-commit-config.yaml  .prettierignore  AGENTS.md  BACKLOG.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  GEMINI.md  LICENSE  Makefile  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md  docker-compose.backup.yml  docker-compose.ibgateway.yml  docker-compose.live.yml  docker-compose.mvp.yml  docker-compose.paper.yml  docker-compose.postgres.yml  docker-compose.test.yml  docker-compose.yml  lighthouserc.cjs  mcp-servers.project.yaml  mcp-servers.yaml  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml
.claude/: handover-2026-05-18-dual-daemon-spec.md  handover-2026-05-18-roadmap-progress.md  settings.json
.claude/hooks/: openspec-apply-enforce.py
.cursor/rules/: 00-AGENTS.mdc  00-dispatcher.mdc
.gemini/: settings.json
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: build-images.yml  ci.yml  coderabbit-fallback.yml  dep-check.yml  issue-sync.yml  license-boundary-check.yml  openapi-types.yml  project-board-synced-check.yml  project-state-machine.yml  project-status-slice-progress.yml  project-status.yml  propagate-archive.yml  regenerate-lock.yml  release-cut.yml
.secrets/: .sops.yaml  dev.env.enc  live.env.enc  paper.env.enc
apps/api/: Dockerfile  Makefile.includes  README.md  alembic.ini  docker-entrypoint.sh
apps/api/scripts/: check_shared_boundary.py
apps/openbb-sidecar/: .dockerignore  Dockerfile  README.md  pyproject.toml
apps/openbb-sidecar/src/openbb_sidecar/: __init__.py  config.py  main.py
apps/openbb-sidecar/src/openbb_sidecar/adapters/: __init__.py  openbb_facade.py
apps/openbb-sidecar/src/openbb_sidecar/routes/: __init__.py  economy.py  equity.py  health.py
apps/openbb-sidecar/tests/integration/: test_routes.py
apps/openbb-sidecar/tests/unit/: test_health_route.py  test_openbb_facade.py
apps/web/: .gitignore  Dockerfile  README.md  package.json  playwright.config.ts  tsconfig.json  vite.config.ts
apps/web/.storybook/: main.ts  preview.ts
apps/web/src/: app.css  app.d.ts  app.html  hooks.server.ts
apps/web/tests/: approvals-page.test.ts  auth-flow.test.ts  costs-format.test.ts  costs-page.test.ts  countdown.test.ts  parse-citations.test.ts  parse-recommendation.test.ts  password-ageing-banner.test.ts  portfolio-format.test.ts  portfolio-page.test.ts  render-brief-body.test.ts  research-recent.test.ts  research-tab.test.ts  risk-colour.test.ts  risk-page.test.ts  sparkline.test.ts  strategies-catalogue.test.ts  strategies-form-page.test.ts  strategies-list-page.test.ts  trades-detail-page.test.ts  trades-list-page.test.ts  trades-variants.test.ts
apps/web/tests-e2e/: README.md  dashboard-skeleton.spec.ts  error-boundary.spec.ts  login.spec.ts  mock-fastapi.mjs  research-audit-trail.spec.ts  research-brief-detail.spec.ts  sidebar-dynamic.spec.ts  theme-toggle.spec.ts
compose/: backup.yml  ibgateway-ephemeral-live.yml  ibgateway.yml  mvp.yml  postgres.yml
deploy/: fleet-gitrepo.yaml
docs/: architecture-decisions.md  backlog.md  data-model.md  getting-started.md  gotchas.md  hitl-gates-log.md  mcp-hitl-approvals-deploy.md  mvp-deploy.md  openspec-slice-plan.md  openspec-slice.md  personas-jtbd.md  prd-validation-report.md  prd.md  project-structure.md  roadmap-ingestion.md  roadmap-llm-features.md  roadmap-ops.md  roadmap-ui.md  runbook.md
docs/adr/: ADR-014-2026-04-28-bitemporal-research-facts.md  ADR-015-2026-04-28-openbb-sidecar-isolation.md  ADR-016-2026-04-28-research-domain-and-backtest-skip.md  ADR-017-2026-04-28-scrape-ladder-4-tiers.md  ADR-018-2026-05-16-llm-observability-langfuse.md
docs/research/: data-sources-catalogue.md  feature-matrix.md  oss-algo-trading-landscape.md
docs/runbooks/: api-foundation-typegen.md  approval-channels-resilience.md  auth-secret-rotation.md  budget-cap-management.md  ibkr-gateway-bringup.md  postgres-backup-restore.md  postgres-cutover.md  replay-cache-refresh.md  research-data-sources.md  risk-kill-switch.md  secret-rotation.md  sops-decrypt-at-boot.md  trading-event-replay.md
docs/ux/: DESIGN.md  components.md  j0.md  j1.md  j2.md  j3.md
docs/ux/variants/: mock-c3-auth-surfaces.html  mock-c4-icons.html  mock-c6-feature-flag-toggle.html  mock-j1-3-trade-detail.html  mock-j1-4-yaml-editor.html  mock-j2-7-tier2-banner.html  (+4 more)
helm/iguanatrader-stack/: .helmignore  Chart.yaml  values.yaml
helm/openbb-sidecar/: Chart.yaml  fleet.yaml  values-local.yaml  values-vps.yaml  values.yaml
openspec/: README.md
retros/: api-foundation-rfc7807.md  approval-channels-multichannel.md  approvals-dashboard-ui.md  auth-change-password.md  auth-forgot-password-flow.md  auth-jwt-cookie.md  auth-password-aging-warning.md  bootstrap-monorepo.md  channel-email-adapter.md  costs-dashboard-ui.md  dashboard-svelte-skeleton.md  deployment-foundation.md  donchian-strategy-mvp.md  factimeline-as-of-mode.md  fix-donchian-channel-bounds.md  hypothesis-proposal-invariants.md  ibkr-adapter-resilient.md  k1-followup-bus-subscriptions.md  live-readiness-fase-a.md  market-data-replay.md  market-data-snapshot-port.md  mvp-deploy-cli-and-compose.md  observability-cost-meter.md  openbb-sidecar-container.md  orchestration-scheduler-routines.md  orchestration-trailing-stops-cron.md  p1-channel-fanout-production.md  p1-followup-bus-subscriptions.md  p1-followup-channel-fanout.md  portfolio-dashboard-mvp.md  portfolio-pnl-and-equity-series.md  property-tests-bus-bridge-handlers.md  proposals-list-endpoint.md  propose-event-emission-property.md  r6-hindsight-integration.md  research-bitemporal-schema.md  research-brief-by-version-endpoint.md  research-brief-synthesis.md  research-citation-renderer-refactor.md  research-edgar-fred-adapters.md  (+27 more)
scripts/: gemini_start.py  iguana-compose.sh  install-playbook-hooks.sh  postgres-backup.sh  postgres-restore.sh
scripts/git-hooks/: post-checkout  post-merge
specs/: co-edit-pairs.yaml
(+957 files in other folders)
