[project]
name = "iguanatrader"
version = "0.0.0"
description = "Algorithmic trading bot — paper-first → live IBKR. Workspace root."
license = "Apache-2.0 AND LicenseRef-Commons-Clause"
requires-python = ">=3.11"
authors = [
    { name = "Arturo Ramírez", email = "arturo6ramirez@gmail.com" },
]

[tool.poetry]
# Root pyproject is workspace-level only; no installable package at the root.
# Slice 2 (shared-primitives) lands `apps/api/src/iguanatrader/` and slice 3
# adds Alembic migrations + persistence layer runtime deps below.
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
sqlalchemy = { version = ">=2.0,<3.0", extras = ["asyncio"] }
alembic = ">=1.13,<2.0"
aiosqlite = ">=0.19,<1.0"
# Slice 4 (auth-jwt-cookie) — FastAPI foundation pre-pattern. Slice 5
# (api-foundation-rfc7807) layers RFC 7807 exception handlers +
# dynamic-discovery + OpenAPI typegen on top WITHOUT removing these.
fastapi = ">=0.115,<1.0"
pydantic = { version = ">=2.9,<3.0", extras = ["email"] }
email-validator = ">=2.0,<3.0"
structlog = ">=24.4,<26.0"
python-multipart = ">=0.0.9,<1.0"
uvicorn = { version = ">=0.30,<1.0", extras = ["standard"] }
# Slice 4 — auth-specific.
pyjwt = { version = ">=2.8,<3.0", extras = ["crypto"] }
argon2-cffi = ">=23.1,<24.0"
slowapi = ">=0.1.9,<1.0"
# Slice 5 (api-foundation-rfc7807) — Typer CLI auto-discovery scaffold.
# Subcommands land in subsequent slices (T4 bootstrap-tenant, etc.).
typer = ">=0.12,<1.0"

[tool.poetry.scripts]
# Slice 5 (api-foundation-rfc7807) — exposes the Typer auto-discovery CLI.
# Slice 5 ships zero subcommands; future slices add them under
# `apps/api/src/iguanatrader/cli/<name>.py`.
iguanatrader = "iguanatrader.cli.main:cli_app"

[tool.poetry.group.postgres]
optional = true

[tool.poetry.group.postgres.dependencies]
asyncpg = ">=0.29,<1.0"

[tool.poetry.group.dev.dependencies]
ruff = ">=0.7"
black = ">=24.10"
mypy = ">=1.13"
pytest = ">=8.3"
pytest-asyncio = ">=0.24"
hypothesis = ">=6.115"
pytest-cov = ">=5.0"
# Slice 4 — FastAPI test client.
httpx = ">=0.27,<1.0"

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"

# ---------------------------------------------------------------------------
# Tooling configuration (consumed by ruff / black / mypy / pytest)
# ---------------------------------------------------------------------------

[tool.ruff]
target-version = "py311"
line-length = 100
# `force-exclude` makes ruff honor `extend-exclude` even when pre-commit passes
# files explicitly (otherwise ruff only consults exclude lists when scanning a
# directory). Without this, vendored content under skills/ and .ai-playbook/
# gets reformatted on every commit.
force-exclude = true
extend-exclude = [
    ".venv",
    "node_modules",
    "dist",
    "build",
    ".skills-sources",
    ".ai-playbook",
    "skills",
    ".claude",
    ".gemini",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "SIM", # flake8-simplify
    "RUF", # ruff-specific
]
ignore = [
    "E501", # line length handled by black
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["B011"] # asserts allowed in tests

[tool.ruff.lint.flake8-bugbear]
# FastAPI canonical pattern: `Depends(callable)` / `Query(...)` etc. as
# default argument values. The ruff B008 check flags these; the
# extend-immutable-calls list whitelists the FastAPI factory functions
# that ARE intended to be called at module load time.
extend-immutable-calls = [
    "fastapi.Body",
    "fastapi.Cookie",
    "fastapi.Depends",
    "fastapi.File",
    "fastapi.Form",
    "fastapi.Header",
    "fastapi.Path",
    "fastapi.Query",
    "fastapi.Security",
    # Project factories: by design (slice 4 D10) they return a fresh
    # Depends-ready callable; calling at module-load is intentional.
    "iguanatrader.api.deps.requires_role",
]

[tool.black]
target-version = ["py311"]
line-length = 100
# `force-exclude` makes black honor the exclude regex even when pre-commit
# passes files explicitly. Same rationale as [tool.ruff].force-exclude above.
force-exclude = '''
/(
    \.venv
  | node_modules
  | dist
  | build
  | \.skills-sources
  | \.ai-playbook
  | skills
  | \.claude
  | \.gemini
)/
'''
extend-exclude = '''
/(
    \.venv
  | node_modules
  | dist
  | build
  | \.skills-sources
  | \.ai-playbook
  | skills
  | \.claude
  | \.gemini
)/
'''

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
disallow_any_unimported = true
disallow_untyped_decorators = true
no_implicit_reexport = true
show_error_codes = true
# Slice 2 (shared-primitives) plants source under apps/api/src/iguanatrader/.
# Subsequent slices add more bounded contexts under the same root. This entry
# tells mypy where to resolve `iguanatrader.*` imports.
mypy_path = ["apps/api/src"]
exclude = [
    "^\\.venv/",
    "^node_modules/",
    "^dist/",
    "^build/",
    "^\\.skills-sources/",
    "^\\.ai-playbook/",
    "^skills/",
    "^\\.claude/",
    "^\\.gemini/",
]

[tool.pytest.ini_options]
minversion = "8.0"
asyncio_mode = "auto"
addopts = "-q --strict-markers"
testpaths = ["apps/api/tests", "tests"]
# Same rationale as [tool.mypy].mypy_path — make `iguanatrader.*` importable
# from tests without an installed wheel.
pythonpath = ["apps/api/src"]
markers = [
    "integration: integration tests (may hit DB / network)",
    "property: hypothesis property-based tests",
]
filterwarnings = [
    "error",
    "ignore::DeprecationWarning:poetry.*",
    # Windows-only: aiosqlite + asyncio.run leaks event loops + sockets when
    # multiple Hypothesis examples + coverage are combined in one process.
    # The leaked resources don't cause test failures (correctness is fine);
    # we accept the noise rather than block CI on a Windows quirk that
    # doesn't reproduce on the Linux CI runners. See gotcha #17.
    "ignore::pytest.PytestUnraisableExceptionWarning",
]
