[tool.poetry]
name = "openbb-sidecar"
version = "0.1.0"
description = "AGPL-isolated OpenBB Platform sidecar for iguanatrader; communicates with the iguanatrader monolith over HTTP loopback per ADR-015."
authors = ["Arturo <arturo6ramirez@gmail.com>"]
license = "AGPL-3.0-or-later"
readme = "README.md"
packages = [{ include = "openbb_sidecar", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
openbb = "^4"
openbb-equity = "*"
openbb-economy = "*"
fastapi = "^0.115"
uvicorn = { extras = ["standard"], version = ">=0.32,<0.35" }
httpx = ">=0.27,<0.29"
structlog = "^24.4"
pydantic-settings = "^2.6"

[tool.poetry.group.dev.dependencies]
pytest = "^8"
pytest-asyncio = ">=0.24,<0.27"
mypy = "^1.13"
ruff = ">=0.7,<0.13"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "W"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unreachable = true
disallow_untyped_decorators = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
